logs/fail_run_20250919_132655.log
Starting test run at Fri, Sep 19, 2025  1:26:55 PM
Logging to: logs/fail_run_20250919_132655.log
Test arguments: 
----------------------------------------
Compiling debashc...
warning: unused import: `std::collections::HashMap`
 --> src\generator\redirects.rs:4:5
  |
4 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused variable: `cmd`
  --> src\generator\commands\system_commands.rs:36:35
   |
36 |         Word::CommandSubstitution(cmd, _) => {
   |                                   ^^^ help: if this is intentional, prefix it with an underscore: `_cmd`
   |
   = note: `#[warn(unused_variables)]` on by default

warning: unused variable: `output`
  --> src\generator\commands\find.rs:42:13
   |
42 |     let mut output = String::new();
   |             ^^^^^^ help: if this is intentional, prefix it with an underscore: `_output`

warning: variable does not need to be mutable
  --> src\generator\commands\find.rs:42:9
   |
42 |     let mut output = String::new();
   |         ----^^^^^^
   |         |
   |         help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` on by default

warning: unused variable: `command_str`
   --> src\generator\words.rs:334:37
    |
334 | ...                   let command_str = generator.word_to_perl(command);
    |                           ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_command_str`

warning: methods `parse_variable_expansion` and `parse_arithmetic_expression` are never used
    --> src\parser\commands.rs:1186:8
     |
20   | impl Parser {
     | ----------- methods in this implementation
...
1186 |     fn parse_variable_expansion(&mut self) -> Result<Word, ParserError> {
     |        ^^^^^^^^^^^^^^^^^^^^^^^^
...
1255 |     fn parse_arithmetic_expression(&mut self) -> Result<Word, ParserError> {
     |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = note: `#[warn(dead_code)]` on by default

warning: function `parse_command` is never used
    --> src\parser\control_flow.rs:1075:4
     |
1075 | fn parse_command(parser: &mut Parser) -> Result<Command, ParserError> {
     |    ^^^^^^^^^^^^^

warning: function `parse_assignment` is never used
    --> src\parser\control_flow.rs:1285:4
     |
1285 | fn parse_assignment(parser: &mut Parser) -> Result<Command, ParserError> {
     |    ^^^^^^^^^^^^^^^^

warning: function `parse_parameter_expansion` is never used
    --> src\parser\words.rs:1862:4
     |
1862 | fn parse_parameter_expansion(_lexer: &mut Lexer) -> Result<Word, ParserError> {
     |    ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: function `escape_glob_pattern` is never used
 --> src\generator\commands\find.rs:4:4
  |
4 | fn escape_glob_pattern(pattern: &str) -> String {
  |    ^^^^^^^^^^^^^^^^^^^

warning: function `parse_size_to_bytes` is never used
   --> src\generator\commands\find.rs:190:4
    |
190 | fn parse_size_to_bytes(size_str: &str) -> u64 {
    |    ^^^^^^^^^^^^^^^^^^^

warning: function `generate_tr_linebyline_impl` is never used
  --> src\generator\commands\tr.rs:16:4
   |
16 | fn generate_tr_linebyline_impl(generator: &mut Generator, cmd: &SimpleCommand, input_var: &str, _command_index: &str) -> String {
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: function `generate_tr_buffered_impl` is never used
  --> src\generator\commands\tr.rs:65:4
   |
65 | fn generate_tr_buffered_impl(generator: &mut Generator, cmd: &SimpleCommand, input_var: &str, command_index: &str) -> String {
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: function `is_variable_used_after_for_loop` is never used
   --> src\generator\control_flow.rs:228:4
    |
228 | fn is_variable_used_after_for_loop(commands: &[Command], for_loop_var: &str, for_loop_index: usize) -> bool {
    |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: fields `variable_usage` and `scope_depth` are never read
  --> src\variable_analysis.rs:8:5
   |
6  | pub struct VariableUsageAnalyzer {
   |            --------------------- fields in this struct
7  |     /// Maps variable names to their usage information
8  |     variable_usage: HashMap<String, VariableUsageInfo>,
   |     ^^^^^^^^^^^^^^
9  |     /// Current scope depth for tracking nested scopes
10 |     scope_depth: usize,
   |     ^^^^^^^^^^^
   |
   = note: `VariableUsageAnalyzer` has derived impls for the traits `Clone` and `Debug`, but these are intentionally ignored during dead code analysis

warning: `debashl` (lib) generated 15 warnings (run `cargo fix --lib -p debashl` to apply 2 suggestions)
   Compiling debashl v0.1.0 (D:\GitHub\sh2perl)
error[E0425]: cannot find value `shell_output_result` in this scope
   --> src\testing.rs:470:49
    |
470 |     let shell_stdout = String::from_utf8_lossy(&shell_output_result.stdout).to_string().replace("\r\n", "\n").trim().to_string();
    |                                                 ^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `shell_output_result` in this scope
   --> src\testing.rs:471:49
    |
471 |     let shell_stderr = String::from_utf8_lossy(&shell_output_result.stderr).to_string().replace("\r\n", "\n").trim().to_string();
    |                                                 ^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `shell_output_result` in this scope
   --> src\testing.rs:474:25
    |
474 |     let shell_success = shell_output_result.status.success();
    |                         ^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `shell_output_result` in this scope
   --> src\testing.rs:491:54
    |
491 |     println!("Shell exit: {} | Translated exit: {}", shell_output_result.status, translated_output.status);
    |                                                      ^^^^^^^^^^^^^^^^^^^ not found in this scope

warning: unused variable: `status`
  --> src\execution.rs:58:21
   |
58 |             Ok(Some(status)) => {
   |                     ^^^^^^ help: if this is intentional, prefix it with an underscore: `_status`
   |
   = note: `#[warn(unused_variables)]` on by default

For more information about this error, try `rustc --explain E0425`.
warning: `debashl` (bin "debashc") generated 1 warning
error: could not compile `debashl` (bin "debashc") due to 4 previous errors; 1 warning emitted
Running debashc with 60 second timeout...
Running: debashc test generation and execution
Command: ./target/debug/debashc.exe fail --perl-critic
Timeout: 60s
----------------------------------------
Running: debashc test generation and execution
Command: ./target/debug/debashc.exe fail --perl-critic
Timeout: 60s
----------------------------------------
True
Command timed out after 60s, killing process...
True
----------------------------------------
Command timed out with exit code: 124
----------------------------------------
Command timed out after 60s
----------------------------------------
Command completed with exit code: 124
----------------------------------------
